# routes/APIRouter.js
@@ -15,6 +15,7 @@ import Tracks from "./Tracks";
 //*** Swagger ***/
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "../swagger_output.json" assert { type: "json" };
+import interests from "./interests.js";
 
 const router = Router();
 router.use("/api", swaggerUi.serve, swaggerUi.setup(swaggerFile));
@@ -31,4 +32,6 @@ router.use("/", facebook);
 router.use("/admin", jwt.authadmin, admin);
 router.use("/", jwt.authenticateWithJWT, dashboard);
 router.use("/Tracks", jwt.authenticateWithJWT, Tracks);
+router.use("/interests", interests);
+
 export default router;
